<resources>
    <string name="app_name">YammiWithShabi</string>
    <string name="button_send">send</string>
    <string name="Text_Show_Email">Name</string>
    <string name="logInHeader">Welcome To YammyWithShabi press your name to login</string>
    <string name="welcome">Welcome to YammyWithShabi</string>
    <string name="ShowEmail">email</string>
    <string name="ShowId">Id</string>
    <string name="logOut_Button">logOut</string>
    <string name="next_page_button">Next</string>
    <string name="hellow_TextField">HELLO</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="logOut">Log out</string>
    <string name="drawer_item_home">Feed</string>
    <string name="drawer_item_profile">Add new recipe</string>
    <string name="drawer_item_logOut">Log Out</string>
    <string name="dessert_recipe">recipe...</string>
    <string name="addcommentText">type your comment...</string>
    <string name="addcomment_button">send</string>
    <string name="desertPicture">desertPicture</string>
    <string name="dateCreated">Date Created</string>
    <string name="newDessertPicture">NewDessertPicture</string>
    <string name="setPicture">set Image</string>
    <string name="typeRecipe">Tell us your recipe...</string>
    <string name="cancelButton">cancel</string>
</resources>
