<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/dessert_image"
        android:layout_width="334dp"
        android:layout_height="201dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desertPicture"
        app:layout_constraintBottom_toTopOf="@+id/recipe_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_text"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/recipe_text"
        android:layout_width="344dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dessert_recipe"
        app:layout_constraintBottom_toTopOf="@+id/add_comment_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_email_text"
        android:layout_width="243dp"
        android:layout_height="23dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ShowEmail"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dessert_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_comment_button"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="252dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/addcommentText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_comment_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_text" />

    <EditText
        android:id="@+id/date_created"
        android:layout_width="117dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/dateCreated"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/dessert_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_email_text"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>